<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:layout_gravity="center_horizontal|center_vertical"
    tools:context=".ui.MainFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/mainLogo"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/main_portrait"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/welcome_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/mainLogo"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/mainLogo"
        app:layout_constraintTop_toBottomOf="@id/mainLogo" />

    <TextView
        android:id="@+id/qash_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qash"
        android:textColor="@color/gold"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/welcome_tv"
        app:layout_constraintStart_toStartOf="@+id/welcome_tv"
        app:layout_constraintTop_toBottomOf="@id/welcome_tv"
        android:layout_marginTop="-23dp"
        />

    <TextView
        android:id="@+id/desc_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/descreption_main"
        android:textColor="@color/light_gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/qash_tv"
        app:layout_constraintStart_toStartOf="@+id/qash_tv"
        app:layout_constraintTop_toBottomOf="@id/qash_tv"  />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="24dp"
                app:backgroundTint="@null"
                android:background="@drawable/rounded_button_background"
                android:gravity="center"
                android:padding="7dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/desc_tv"
                app:layout_constraintStart_toStartOf="@id/desc_tv"
                app:layout_constraintTop_toBottomOf="@id/desc_tv" />


            <Button
                    android:id="@+id/sign_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="25dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/login_btn"
                    app:backgroundTint="@null"
                    app:layout_constraintStart_toStartOf="@id/login_btn"
                    app:layout_constraintTop_toBottomOf="@id/login_btn"
                    app:layout_constraintVertical_bias="0.0"
                    android:background="@drawable/outlined_button_background"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/gold"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:padding="7dp" />



        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>