<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".ui.SigupFragment">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



            <LinearLayout
                    android:id="@+id/creat_acc_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="100dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginBottom="27dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <TextView
                        android:id="@+id/creat_acc"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/creat_acc"
                        android:textColor="@color/gold"
                        android:textSize="55sp"

                        />

                <TextView
                        android:id="@+id/desc3_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/desc2"
                        android:textColor="@color/light_gray"
                        android:textSize="18sp"

                        />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/form_lin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="27dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:orientation="vertical"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/creat_acc_tv">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <EditText
                            android:id="@+id/first_name_et"
                            android:layout_width="0dp"
                            android:layout_height="44dp"
                            android:layout_weight="1"
                            android:background="@drawable/edittxt"
                            android:layout_marginEnd="10dp"
                            android:hint="@string/first_name"
                            android:textSize="19sp"
                            android:paddingEnd="18dp"
                            android:paddingStart="18dp"
                            android:textColorHint="@color/light_gray"
                            android:textColor="@color/light_gray" />

                    <EditText
                            android:id="@+id/last_name_et"

                            android:layout_width="0dp"
                            android:layout_height="44dp"
                            android:paddingEnd="18dp"
                            android:paddingStart="18dp"
                            android:layout_weight="1"
                            android:background="@drawable/edittxt"
                            android:hint="@string/last_name"
                            android:textSize="19sp"
                            android:textColorHint="@color/light_gray"
                            android:textColor="@color/light_gray"


                            />
                </LinearLayout>

                <EditText
                        android:id="@+id/email_et"

                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:paddingEnd="18dp"
                        android:paddingStart="18dp"
                        android:layout_marginTop="17dp"
                        android:background="@drawable/edittxt"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textSize="19sp"
                        android:textColorHint="@color/light_gray"
                        android:textColor="@color/light_gray"


                        />

                <EditText

                        android:id="@+id/pass_et"

                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:paddingEnd="18dp"
                        android:paddingStart="18dp"
                        android:layout_marginTop="17dp"
                        android:background="@drawable/edittxt"
                        android:hint="@string/pass"
                        android:inputType="textPassword"
                        android:textSize="19sp"
                        android:textColorHint="@color/light_gray"
                        android:textColor="@color/light_gray"


                        />

                <EditText
                        android:id="@+id/confirm_pass_et"


                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:paddingEnd="18dp"
                        android:paddingStart="18dp"
                        android:layout_marginTop="17dp"
                        android:background="@drawable/edittxt"
                        android:hint="@string/confirm_pass"
                        android:inputType="textPassword"
                        android:textSize="19sp"
                        android:textColorHint="@color/light_gray"
                        android:textColor="@color/light_gray"

                        />

            </LinearLayout>

            <Button
                    android:id="@+id/sign_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="27dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="25dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/form_lin"
                    app:layout_constraintStart_toStartOf="@id/form_lin"
                    app:layout_constraintTop_toBottomOf="@id/form_lin"
                    app:layout_constraintVertical_bias="0.0"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:padding="7dp"
                app:backgroundTint="@null"

                android:background="@drawable/rounded_button_background"
                    />
    <LinearLayout
        android:id="@+id/have_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/sign_btn"
        android:layout_marginTop="27dp"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/have_acc_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_acc"
            android:textSize="14sp"
            android:textColor="@color/dark_gray"/>

                <TextView
                        android:id="@+id/login_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:paddingStart="2dp"

                        />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/or_lin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="27dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/have_tv">

                <!-- Left Line -->
                <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@color/light_gray"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="7dp" />

                <!-- OR Text -->
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/or"
                        android:gravity="center"
                        android:textColor="@color/light_gray"
                        android:textSize="25sp" />

                <!-- Right Line -->
                <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@color/light_gray"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="24dp" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:layout_marginBottom="27dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/or_lin">

                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="100dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/facebook" />

                <ImageButton
                        android:id="@+id/googleImageV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:src="@drawable/google" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>